@@ -1,0 +1,82 @@
+function [ ] = smoldyn2matlab( n )
+%SMOLDYN2MATLAB imports and converts Smoldyn molecule trajectory into
+%Matlab format.
+%
+%   The Smoldyn program (http://www.smoldyn.org/index.html) is used
+%   to output trajectories of a large number of molecules. This data is
+%   saved as text files, here assumed to be called trajs1.txt ...
+%   trajsn.txt. This function converts this txt file to a matlab matrix
+%   with the dimensions number of molecules x 3 x number of timesteps, wher
+%   the 3 refers to the x,y and z co-ordinates of the molecules.
+%   Matlab files are called positions1.mat ... positionsn.mat. The input n
+%   is the number of files to be converted, assuming consecutive numbering
+%   from 1 onwards. Note that the file size generated by Smoldyn can be
+%   very large (many GBs), and if greater than approximately 6GB, Matlab
+%   will fail to import the text file. To avoid this problem, create
+%   multiple molecule types within Smoldyn and save the trajectories of
+%   each as a separate txt file.
+
+% Author: Jo Bates <jobates81@gmail.com>
+% Copyright © 2014 University of Oxford
+% Version: 0.1.0
+% $Rev$
+% $Date$
+% 
+% University of Oxford means the Chancellor, Masters and Scholars of
+% the University of Oxford, having an administrative office at
+% Wellington Square, Oxford OX1 2JD, UK. 
+%
+% This file is part of Gerardus.
+%
+% This program is free software: you can redistribute it and/or modify
+% it under the terms of the GNU General Public License as published by
+% the Free Software Foundation, either version 3 of the License, or
+% (at your option) any later version.
+%
+% This program is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details. The offer of this
+% program under the terms of the License is subject to the License
+% being interpreted in accordance with English Law and subject to any
+% action against the University of Oxford being under the jurisdiction
+% of the English Courts.
+%
+% You should have received a copy of the GNU General Public License
+% along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+% for each file 1 to n
+for i = 1:n
+    % import the text file
+    filetoimport = sprintf('trajs%d.txt', i);
+    trajs = dlmread(filetoimport);
+        
+    % remove the unneeded columns (referencing timepoints and molecule
+    % names
+    trajs = trajs(:,[1 4:6]);
+
+    % calculate number of timesteps and number of molecules
+    timesteps = trajs(:,1);
+    no_of_timesteps = max(timesteps)-1; % final timestep sometimes has
+    % problems with missing data so it easier to remove this final one
+    no_of_molecules = nnz(timesteps ==1);
+
+    % rearrange matrix
+    positions = zeros(no_of_timesteps, no_of_molecules, 3);
+    for j = 1:no_of_timesteps
+         timestep_data = trajs((no_of_molecules*(j-1)+1):no_of_molecules*j,:);
+         positions(j,:,:) = timestep_data(:,2:4);
+    end
+
+    % rearrange order of matrix to be (molecules, xyz, timestep)
+    positions = permute(positions,[2 3 1]);
+    eval(sprintf('positions%d = positions', i));
+    filetosave = sprintf('positions%d.mat', i);
+    
+    % save matlab file as positionsi.mat
+    save(filetosave, sprintf('positions%d', i), '-v7.3');
+    clearvars -except i
+end
+
+end
+
