@@ -1,3 +1,9 @@
+2014-11-05  Jo Bates <jobates81@gmail.com>
+
+	* Add smoldyn2matlab(0.1.0)
+
+	- converts Smoldyn molecule trajectory into Matlab format
+
 2014-11-05  Christopher Kelly  <christopher.kelly28@gmail.com>
 
 	* Add matlab/ThirdPartyToolbox/loaddcmdir.m,
